Added UI for left menu, new reservation, calendar and rooms select

--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -1,4 +1,4 @@
-$light: #DDDDDD;
+$light: #b4d0b8;
 $dark: #012014;
 $login-placeholder: #5D7C70;
 $login-input-text: #ACBCB6;
@@ -6,6 +6,8 @@ $main-bg: #dde4ed;
 $main-red: #EA6464;
 $main-dark: #01321f;
 $list-text: #9EB1C7;
-$main-color-2: #05f296;
+$main-color-2: #0bce82;
 $contact-info-phone: #343D54;
 $bg-color-transparent-2: rgba(0, 0, 0, 0.2);
+$transparent01: rgba(255,255,255,0.1);
+$transparent04: rgba(255,255,255,0.4);
