--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,12 +16,57 @@ h1 {
 }
 
 header {
+    @extend %flex-space-between;
+    padding: 20px;
     height: 110px;
+    background: $dark;
+    color: $main-color-2;
+    border-bottom: 1px solid $transparent04;
 }
 
 .admin-main-content {
-    background: red;
+    background: $dark;
     height: calc(100% - 110px);
+}
+
+//override material ui styles
+.App {
+    .MuiPaper-root {
+        width: 200px;
+        height: 100%;
+        background: $dark;
+        border-right: 0.4px solid $transparent01;
+        box-shadow: 1px 1px 4px $transparent01;
+    }
+
+    .MuiTab-textColorPrimary {
+        color: $login-placeholder;
+        &.Mui-selected {
+            color: $main-color-2;
+        }
+        &:hover {
+            background-color: $transparent01;
+        }
+    }
+
+    //.PrivateTabIndicator-vertical-78 {
+    //    background-color: $main-color-2;
+    //}
+}
+
+.admin-main-content {
+    @extend %flex-space-between;
+
+    .side-bar {
+        height: 100%;
+    }
+
+    .tab-content {
+        padding: 20px;
+        width: 100%;
+        height: 100%;
+        background: $light;
+    }
 }
 
 .progress-wrap {
